Neater fulfilment method modelling
