# api/controllers/vendors/view-vendor-menu.ts
@@ -28,7 +28,6 @@ module.exports = {
   fn: async function (inputs, exits) {
     var vendor = await Vendor.findOne(inputs.vendorid)
     .populate('products');
-    // .populate('fulfilmentMethods');
 
     if(!vendor){
       return exits.error();
